fixing an issue where icon list columns could become unbalanced when gaps were applied

--- a/src/blocks/iconlist/style.scss
+++ b/src/blocks/iconlist/style.scss
@@ -86,13 +86,13 @@
     border: 0px solid transparent;
 }
 .kt-svg-icon-list-columns-2 ul.kt-svg-icon-list {
-    grid-template-columns: 50% auto;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
     grid-template-rows: auto;
 	display: grid;
 	gap: 5px 1em;
 }
 .kt-svg-icon-list-columns-3 ul.kt-svg-icon-list {
-    grid-template-columns: 33% 33% auto;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-template-rows: auto;
 	display: grid;
 	gap: 5px 1em;
@@ -108,12 +108,12 @@
 		display: block;
 	}
 	.kt-tablet-svg-icon-list-columns-2 ul.kt-svg-icon-list {
-		grid-template-columns: 50% auto;
+		grid-template-columns: repeat(2, minmax(0, 1fr));
 		grid-template-rows: auto;
 		display: grid;
 	}
 	.kt-tablet-svg-icon-list-columns-3 ul.kt-svg-icon-list {
-		grid-template-columns: 33% 33% auto;
+		grid-template-columns: repeat(3, minmax(0, 1fr));
 		grid-template-rows: auto;
 		display: grid;
 	}
@@ -123,12 +123,12 @@
 		display: block;
 	}
 	.kt-mobile-svg-icon-list-columns-2 ul.kt-svg-icon-list {
-		grid-template-columns: 50% auto;
+		grid-template-columns: repeat(2, minmax(0, 1fr));
 		grid-template-rows: auto;
 		display: grid;
 	}
 	.kt-mobile-svg-icon-list-columns-3 ul.kt-svg-icon-list {
-		grid-template-columns: 33% 33% auto;
+		grid-template-columns: repeat(3, minmax(0, 1fr));
 		grid-template-rows: auto;
 		display: grid;
 	}
